src/tests/cases/snapshots/excise__tests__cases__ui__delete_file-6.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/delete_file  ◆ COMPLETE                                                                                                                                            
 allocated #.#K   reclaim #.#K   apparent 8.0K   3 entries                                                                                                                                    
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                                                                                       ││bounds, state, and actions.       │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                         file3                                                                         ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                      4.0K (50%)                                                                       ││                                  │
││                                                      ╔ ! DELETION RESULT · PRECISE ═══════════════════════════════════════════════╗                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║deleted       1                                                             ║                   ││                                  │
││                                                      ║changed       0                                                             ║                   ││                                  │
││                                                      ║missing       0                                                             ║                   ││                                  │
││                                                      ║failed        0                                                             ║                   ││                                  │
││                                                      ║unattempted   0                                                             ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║Result is precise. [Enter/Esc] close                                        ║                   ││                                  │
│├──────────────────────────────────────────────────────║                                                                            ║───────────────────┤│                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ║                                                                            ║                   ││                                  │
││                                                      ╚════════════════════════════════════════════════════════════════════════════╝                   ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                             subfolder1/ (+1 descendants)                                                              ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                      4.0K (50%)                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
││                                                                                                                                                       ││                                  │
└┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
